--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -21,13 +21,11 @@
   The purpose of this page is to let you know what's changed or new in the extension and it will show up after
   installing or updating the extension to a new version.
 </p>
-<h2>What's new in version 0.16.1?</h2>
+<h2>What's new in version 0.17.0?</h2>
 <ul>
-  <li>Now you can hide premieres until they are available to watch! Enable this feature in the settings.</li>
-  <ul>
-    <li>Settings value was not properly persisted in 0.16.0. This has been fixed in 0.16.1</li>
-  </ul>
-  <li>Mark as Watched toggle is back. Cause for disappearance was YT changing the name of their toggle element.</li>
+  <li>Now you can auto-hide (mark as watched) Shorts! This behaviour is off by default, so you'll have to turn it on in the settings page.</li>
+  <li>Fixed issue with new layout YT is rolling out that broke the feed when a Short was included.</li>
+  <li>Fixed some issues with the settings page not loading correctly in certain cases.</li>
 </ul>
 
 <h2>Want to help?</h2>
@@ -44,6 +42,10 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>v0.16.1</dt>
+  <dd>Now you can hide premieres until they are available to watch! Enable this feature in the settings.</dd>
+  <dd>Mark as Watched toggle is back. Cause for disappearance was YT changing the name of their toggle element.</dd>
+
   <dt>v0.15.2</dt>
   <dd>Fix: "Use YouTube™'s watched gauge" Settings should now correctly save</dd>
 
