--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -25,6 +25,11 @@
 <h2>What's new in version 0.17.3?</h2>
 <ul>
   <li>Fixed shorts not being marked as watched automatically upon viewing (if setting is enabled).</li>
+  <li>
+    Fixed YT UI update breaking the "Mark as watched" overlay on both the subscriptions and channel videos pages.<\br>
+    Not the prettiest fix, but it works for now. Since I don't have access to the old overlay, not sure
+    what the impact on that will be (most likely the button visible at all times, not just on hover).
+  </li>
 </ul>
 
 <h2>Want to help?</h2>
