--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,15 +22,17 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.17.3?</h2>
+<h2>What's new in version 0.17.4?</h2>
 <ul>
-  <li>Fixed shorts not being marked as watched automatically upon viewing (if setting is enabled).</li>
-  <li>
-    Fixed YT UI update breaking the "Mark as watched" overlay on both the subscriptions and channel videos pages.<\br>
-    Not the prettiest fix, but it works for now. Since I don't have access to the old overlay, not sure
-    what the impact on that will be (most likely the button visible at all times, not just on hover).
-  </li>
+  <li>Fix inline ads without link breaking functionality</li>
+  <li>Fix YT update breaking functionality (again, thanks YT)</li>
 </ul>
+
+<h2>Contributor thank you</h2>
+<p>
+  I would like to thank <a href="https://github.com/ericfrazer">ericfrazer</a> for his contributions to the project. He swiftly fixed both of
+  these issues while I was too busy to look at it sooner. Thank you!
+</p>
 
 <h2>Want to help?</h2>
 <p>This extension is developed completely as a hobby project in my free time, if you want to help me, even reaching out
