--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,15 +22,17 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.17.5?</h2>
+<h2>What's new in version 0.18.0?</h2>
 <ul>
-  <li>Fix YT grid layout, where hidden videos were leaving blank spaces at the end of rows.</li>
+  <li>Enable UI for channel's live video (livestream) history</li>
+  <li>Moved forced-grid rules in css to improve performance</li>
+  <li>Enabled forced grid layout on all page</li>
+  <li>Fix: shorts video query catch "Latest YouTube posts" too</li>
 </ul>
 
 <h2>Contributor thank you</h2>
 <p>
   I would like to thank <a href="https://github.com/mocanew">Valentin Mocanu</a> for his contributions to the project.
-  He has helped resolved an issue that I was honestly stumped on, and I'm very grateful for his help.
 </p>
 
 <h2>Want to help?</h2>
@@ -47,6 +49,12 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>v0.17.6</dt>
+  <dd>Enable UI for channel's live video (livestream) history</dd>
+  <dd>Moved forced-grid rules in css to improve performance</dd>
+  <dd>Enabled forced grid layout on all page</dd>
+  <dd>Fix: shorts video query catch "Latest YouTube posts" too</dd>
+
   <dt>v0.17.5</dt>
   <dd>Fix YT grid layout, where hidden videos were leaving blank spaces at the end of rows.</dd>
 
