Enabled refresh when hiding older videos

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -76,7 +76,7 @@
 
       <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
       <input id="settings.hide.watched.refresh.rate" type="number"/><br/>
-      <label for="settings.hide.watched.refresh.rate">(currently works only in "hide watched" state)</label><br/>
+      <label for="settings.hide.watched.refresh.rate">(currently works only in "hide watched" state and when Hiding older videos)</label><br/>
       <br/>
 
       <label for="settings.hide.older.cutoff">Hide videos older than</label>
