--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -37,9 +37,6 @@
       <input id="settings.hide.watched.label" type="checkbox"/>
       <label for="settings.hide.watched.label">Show "Hide Watched" label</label><br/>
 
-      <input id="settings.hide.older.label" type="checkbox"/>
-      <label for="settings.hide.older.label">Show "Hide Older" label</label><br/>
-
       <input id="settings.hide.watched.all.label" type="checkbox"/>
       <label for="settings.hide.watched.all.label">Show "Mark all as watched" label</label><br/>
 
@@ -49,9 +46,6 @@
 
       <input id="settings.hide.watched.default" type="checkbox"/>
       <label for="settings.hide.watched.default">Hide watched default state</label><br/>
-
-      <input id="settings.hide.older.default" type="checkbox"/>
-      <label for="settings.hide.older.default">Hide older default state</label><br/>
 
       <input id="settings.hide.watched.keep.state" type="checkbox"/>
       <label for="settings.hide.watched.keep.state">
@@ -74,20 +68,26 @@
       <label for="settings.hide.shorts">Hide Shorts automatically</label><br/>
       <br/>
 
-      <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
-      <input id="settings.hide.watched.refresh.rate" type="number"/><br/>
-      <label for="settings.hide.watched.refresh.rate">(currently works only in "hide watched" state and when Hiding older videos)</label><br/>
-      <br/>
-
-      <label for="settings.hide.older.cutoff">Hide videos older than</label>
+      <input id="settings.hide.older" type="checkbox"/>
+      <label for="settings.hide.older">Hide older videos </label>
+      <label for="settings.hide.older.cutoff">with default Cutoff: </label>
       <select id="settings.hide.older.cutoff">
+        <option value="All">All</option>
         <option value="Today">Today</option>
         <option value="1 Week">1 Week</option>
         <option value="2 Weeks">2 Weeks</option>
         <option value="1 Month">1 Month</option>
-      </select>
+      </select><br/>
+      <br/>
+
+      <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
+      <input id="settings.hide.watched.refresh.rate" type="number"/><br/>
+      <label for="settings.hide.watched.refresh.rate">(currently works only in "hide watched" state and when Hiding older videos)</label><br/>
+      <br/>
     </form>
   </div>
+
+
 
   <h2>Other YouTube&trade; pages</h2>
 
