--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -66,6 +66,9 @@
 
       <input id="settings.hide.shorts" type="checkbox"/>
       <label for="settings.hide.shorts">Hide Shorts automatically</label><br/>
+
+      <input id="settings.hide.members" type="checkbox"/>
+      <label for="settings.hide.members">Hide Members-only content</label><br/>
       <br/>
 
       <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
