implement feature: Remove Podcast Playlists

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -68,6 +68,10 @@
       <label for="settings.hide.shorts">Hide Shorts automatically</label><br/>
       <br/>
 
+      <input id="settings.remove.podcast.playlists" type="checkbox"/>
+      <label for="settings.remove.podcast.playlists">Remove Podcast Playlists</label><br/>
+      <br/>
+
       <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
       <input id="settings.hide.watched.refresh.rate" type="number"/><br/>
       <label for="settings.hide.watched.refresh.rate">(currently works only in "hide watched" state)</label>
