--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,11 +22,9 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.21.1?</h2>
+<h2>What's new in version 0.21.2?</h2>
 <ul>
-  <li>Fix YT's new progress bar not being detected to mark video as watched</li>
-  <li>Support for Chrome's v3 manifest</li>
-  <li>Support for subscription feed list view</li>
+  <li>Fix YT premieres not hidden when config enabled</li>
 </ul>
 
 <h2>Contributor thank you</h2>
@@ -49,6 +47,9 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>0.21.2</dt>
+  <dd>Fix YT premieres not hidden when config enabled</dd>
+
   <dt>0.21.1</dt>
   <dd>Fix YT's new progress bar not being detected to mark video as watched</dd>
 
